--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
     "\n",
     "def PoorMansWordCount(file_name):\n",
     "    \n",
-    "    fin = # open the given file name for reading only\n",
+    "    fin = open(file_name,'r', errors='ignore')\n",
     "    \n",
     "    # initialize three variables to zero for holding the numbers of characters, words, and lines\n",
     "    \n",
@@ -67,8 +67,8 @@
     "    \n",
     "    for line in fin:\n",
     "        Nlines += 1 # Everytime we read a line, we count it ...\n",
-    "        Nchar += # increment by the length of the line you just read ...\n",
-    "        Nword += # increment of the length of the list you get by splitting the line on whitespace\n",
+    "        Nchar += len(line.replace('\\n',''))\n",
+    "        Nword += len(line.replace('\\n','').split())\n",
     "\n",
     "    print(f'Number of lines in {file_name} is {Nlines}.')     \n",
     "    print(f'Number of words in {file_name} is {Nword}.')     \n",
@@ -79,24 +79,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of lines in C:/Users/admin/Desktop/Python_Sandwich/PLimerick.txt is 8.\n",
+      "Number of words in C:/Users/admin/Desktop/Python_Sandwich/PLimerick.txt is 42.\n",
+      "Number of characters in C:/Users/admin/Desktop/Python_Sandwich/PLimerick.txt is 184.\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your solution on the PLimerick file ...\n",
     "\n",
-    "PoorMansWordCount('Data/PLimerick')"
+    "PoorMansWordCount('C:/Users/admin/Desktop/Python_Sandwich/PLimerick.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of lines in C:/Users/admin/Desktop/Python_Sandwich/ObamaFirstInagural.tex is 183.\n",
+      "Number of words in C:/Users/admin/Desktop/Python_Sandwich/ObamaFirstInagural.tex is 2423.\n",
+      "Number of characters in C:/Users/admin/Desktop/Python_Sandwich/ObamaFirstInagural.tex is 13445.\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your solution on President Obama's First Inagural Speech\n",
     "\n",
-    "PoorMansWordCount('Data/ObamaFirstInagural.tex')"
+    "PoorMansWordCount('C:/Users/admin/Desktop/Python_Sandwich/ObamaFirstInagural.tex')"
    ]
   },
   {
@@ -116,7 +136,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -130,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
